# zinc

./: .gitignore  COMMERCIAL_TERMS.md  Cargo.toml  LICENSE  README.md  bad.zn  test.db  test_file.txt
.github/workflows/: release.yml
crates/zinc_cli/: Cargo.toml
crates/zinc_cli/src/: main.rs
crates/zinc_core/: Cargo.toml
crates/zinc_core/src/: grammar.pest  lib.rs
crates/zinc_lsp/: Cargo.toml
crates/zinc_lsp/src/: main.rs
crates/zinc_std/: Cargo.toml
crates/zinc_std/src/: lib.rs
editors/vscode/: package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: zinc.tmLanguage.json
examples/: 01_tls_check.zn  02_ecommerce_check.zn  03_exchange_status.zn  05_social_media_check.zn  07_leak_test.zn  10_db_test.zn  11_v1_1_test.zn  12_py_eval.zn  13_full_features.zn  14_json_test.zn
release_package/: COMMERCIAL_TERMS.md  Cargo.toml
release_package/crates/zinc_cli/: Cargo.toml
release_package/crates/zinc_core/: Cargo.toml
release_package/examples/: 04_cross_border_test.zn
