[package]
name = "zinc_std"
version = "1.0.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
wreq = "6.0.0-rc.26"
wreq-util = "3.0.0-rc.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18.1"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde-pyobject = "0.5"
